Vector size mismatch bug fix

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,17 +71,17 @@
     <% end %>
     <div class="container">
       <div class="row">
-        <div class="span9">
+        <div>
           <%= yield %>
         </div>
+      </div><!--/row-->
+      <footer>
+        <p>&copy; Green Energy Monitor 2014</p>
         <div class="span3">
           <h2>About Us</h2>
           Green energy monitor allows you to monitor and compare your past energy consumption.
           Also helps you preview your future energy consumption and helps you take proactive insightful decisions based on your data.
         </div>
-      </div><!--/row-->
-      <footer>
-        <p>&copy; Green Energy Monitor 2014</p>
       </footer>
 
     </div> <!-- /container -->
