--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,29 +1,54 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div  id="content">
+  <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
+  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :class => 'form-horizontal'} ) do |f| %>
+      <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+      <div class="control-group">
+        <%= f.label :email, :class => 'control-label' %>
+        <div class="controls">
+          <%= f.email_field :email, :autofocus => true, :class => 'email_field'%>
+        </div>
+      </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? -%>
+          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+      <% end -%>
+
+      <div class="control-group">
+        <%= f.label :password, :class => 'control-label' %>
+        <div class="controls">
+          <%= f.password_field :password, :autocomplete => 'off', :class => 'password_field'%>
+          <i>(leave blank if you don't want to change it)</i>
+        </div>
+      </div>
+
+      <div class="control-group">
+        <%= f.label :password_confirmation, :class => 'control-label' %>
+        <div class="controls">
+          <%= f.password_field :password_confirmation, :class => 'password_field'%>
+        </div>
+      </div>
+
+      <div class="control-group">
+        <%= f.label :current_password, :class => 'control-label' %>
+        <div class="controls">
+          <%= f.password_field :current_password, :class => 'password_field'%>
+          <i>(we need your current password to confirm your changes)</i>
+        </div>
+      </div>
+
+      <div class="form-actions">
+        <div><%= f.submit 'Update', :class => 'btn btn-primary' %></div>
+      </div>
   <% end %>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :password, :autocomplete => "off" %></div>
+  <h3>Cancel my account</h3>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+  <p>Unhappy? <%= button_to 'Cancel my account', registration_path(resource_name), :class => 'btn btn-primary', :data => { :confirm => 'Are you sure?'}, :method => :delete %></p>
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password %></div>
+  <%= link_to 'Back', :back %>
+</div>
 
-  <div><%= f.submit "Update" %></div>
-<% end %>
 
-<h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
-
-<%= link_to "Back", :back %>
