CSS Styling corrections for rickshaw side panel labels

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,10 +78,10 @@
     </div> <!-- /container -->
     <br><br>
     <footer>
-        <p>&copy; Green Energy Monitor 2014</p>
         <h2>About Us</h2>
         Green energy monitor allows you to monitor and compare your past energy consumption.
         Also helps you preview your future energy consumption and helps you take proactive insightful decisions based on your data.
+        <p><br><br>&copy; Green Energy Monitor 2014</p>
     </footer>
   </body>
 </html>
